ephapax-linear/grammar/solo-v1-grammar.ebnf
(* ============================================= *)
(* My Language: Core Grammar                    *)
(* ============================================= *)

(* --- Top-Level Declarations --- *)
program          = { top_level };

top_level        = fn_decl
                 | struct_decl
                 | effect_decl
                 | contract_decl
                 | import_decl
                 | comptime_decl
                 | arena_decl;

(* --- Blocks and Statements --- *)
block            = "{" , { stmt } , "}";

stmt             = expr , ";"
                 | "let" , [ "mut" ] , ident , [ ":" , type ] , "=" , expr , ";"
                 | "if" , expr , block , [ "else" , block ]
                 | "go" , block
                 | [ "return" | "await" ] , expr , ";"
                 | "try" , expr , [ "?" ]
                 | "comptime" , block;

(* --- Expressions --- *)
expr             = literal
                 | ident
                 | expr , "(" , [ expr_list ] , ")"
                 | expr , "." , ident
                 | expr , ( "=" | "+" | "-" | "*" | "/" | "==" | "!=" | "<" | ">" | "&&" | "||" ) , expr
                 | "try" , expr
                 | block
                 | "restrict" , expr;

expr_list        = expr , { "," , expr };

(* --- Types --- *)
type             = "Int"
                 | "String"
                 | "Bool"
                 | ident
                 | type , "->" , type
                 | "Effect" , "<" , type , ">"
                 | [ "&" , [ "mut" ] ] , type
                 | "[" , type , "]"
                 | "{" , { ident , ":" , type } , "}";

(* --- Function Declarations --- *)
fn_decl          = [ "async" | "#[safe]" ] , "fn" , ident , "(" , [ param_list ] , ")"
                 , [ "->" , type ]
                 , [ contract ]
                 , block;

param_list       = ident , ":" , type , { "," , ident , ":" , type };

(* --- Structs --- *)
struct_decl      = "struct" , ident , "{", { ident , ":" , type } , "}";

(* --- Effects --- *)
effect_decl      = "effect" , ident , "{", { fn_decl } , "}";

(* --- Contracts --- *)
contract         = "where" , { contract_clause };

contract_clause = "pre:" , expr
                 | "post:" , expr
                 | "invariant:" , expr;

(* --- Comptime --- *)
comptime_decl    = "comptime" , block;

(* --- Arenas --- *)
arena_decl       = "let" , ident , "=" , "Arena::new()" , ";";

(* --- Imports --- *)
import_decl      = "use" , ident , [ "::" , ident ] , ";";

(* --- Literals --- *)
literal          = int_lit
                 | string_lit
                 | "true"
                 | "false";

int_lit          = digit , { digit };

string_lit       = '"' , { char } , '"';

char             = ? any Unicode character except '"' ?;

(* --- Identifiers --- *)
ident            = letter , { letter | digit | "_" };

letter           = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m"
                 | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
                 | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M"
                 | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z";

digit            = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";

(* ============================================= *)
(* My Language: Lexical Notes                   *)
(* ============================================= *)
(* 1. Whitespace is ignored except to separate  *)
(*    tokens.                                   *)
(* 2. Comments are C-style: // and /* */.      *)
(* 3. Keywords: fn, struct, effect, where,      *)
(*    pre, post, invariant, comptime, let,     *)
(*    mut, if, else, go, return, await, try,    *)
(*    restrict, and, or, true, false.          *)
(* 4. Operators: = + - * / == != < > && ||      *)
(* ============================================= *)
